--- a/WIFI_Client_GET/.vscode/settings.json
+++ b/WIFI_Client_GET/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "header.h": "c",
         "heartbeat.h": "c",
-        "so_uc.h": "c"
+        "so_uc.h": "c",
+        "tareas.h": "c"
     }
 }
