--- a/SO_uC_Basic_Example/platformio.ini
+++ b/SO_uC_Basic_Example/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif8266
 board = esp12e
 framework = simba
+
+; Custom CPU Frequency
+board_build.f_cpu = 160000000l
+
+monitor_speed = 38400
+monitor_port = /dev/ttyUSB0
