--- a/WIFI_Client_GET/.vscode/settings.json
+++ b/WIFI_Client_GET/.vscode/settings.json
@@ -3,6 +3,8 @@
         "header.h": "c",
         "heartbeat.h": "c",
         "so_uc.h": "c",
-        "tareas.h": "c"
+        "tareas.h": "c",
+        "config.h": "c",
+        "string.h": "c"
     }
 }
